--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       "value": "putraicipiyey"
     },
     "OWNER_ID": {
-      "description": "Masukan User ID Telegram untuk Owner BOT",
+      "description": "Masukan User ID Tele untuk Owner BOT",
       "value": "5106625166"
     },
     "ADMINS": {
