--- a/app.json
+++ b/app.json
@@ -15,11 +15,11 @@
     },
     "OWNER": {
       "description": "Masukan Username Telegram untuk Owner BOT [ Jangan Pake @ ]",
-      "value": "putraicipiyey"
+      "value": "sanyagesya"
     },
     "OWNER_ID": {
       "description": "Masukan User ID Tele untuk Owner BOT",
-      "value": "5106625166"
+      "value": "1971239428"
     },
     "ADMINS": {
       "description": "Masukan User ID untuk mendapatkan hak Admin BOT [Hanya dapat membuat link]",
