--- a/app.json
+++ b/app.json
@@ -59,7 +59,7 @@
     },
     "CHANNEL":{
       "description": "Masukan Username Channel anda Untuk Wajib Subscribenya [ Jangan Pake @ ]",
-      "value": "NAUNGANBEBEK",
+      "value": "ttgslsb",
       "required": false
     },
     "GROUP":{
